Maven configuration and eclisp settings updated

--- a/MyWhatsAppSeleniumProj/.settings/org.eclipse.wst.common.component
+++ b/MyWhatsAppSeleniumProj/.settings/org.eclipse.wst.common.component
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="MyWhatsAppSeleniumProj">
+    <wb-module deploy-name="MySel20Proj">
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
-        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/" source-path="/WebContent"/>
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <property name="java-output-path" value="/MyWhatsAppSeleniumProj/target/classes"/>
-        <property name="context-root" value="MyWhatsAppSeleniumProj"/>
+        <property name="context-root" value="MySel20Proj"/>
     </wb-module>
 </project-modules>
