--- a/MyEAP/.settings/org.eclipse.wst.common.component
+++ b/MyEAP/.settings/org.eclipse.wst.common.component
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="MyEAP">
+    <wb-module deploy-name="MyEAP-0.0.1-SNAPSHOT">
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/ear-resources"/>
         <wb-resource deploy-path="/" source-path="/EarContent" tag="defaultRootSource"/>
         <dependent-module archiveName="MyWhatsAppEJB.jar" deploy-path="/" handle="module:/resource/MyWhatsAppEJB/MyWhatsAppEJB">
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="MyWhatsAppSeleniumProj.war" deploy-path="/" handle="module:/resource/MyWhatsAppSeleniumProj/MyWhatsAppSeleniumProj">
+        <dependent-module archiveName="MySel20Proj.war" deploy-path="/" handle="module:/resource/MyWhatsAppSeleniumProj/MyWhatsAppSeleniumProj">
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
