Datamodel extended. New Rest interface to Users Entity

--- a/MyEAP/.settings/org.eclipse.wst.common.component
+++ b/MyEAP/.settings/org.eclipse.wst.common.component
@@ -6,7 +6,7 @@
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="MySel20Proj.war" deploy-path="/" handle="module:/resource/MyWhatsAppSeleniumProj/MyWhatsAppSeleniumProj">
+        <dependent-module archiveName="MySel20Proj-0.0.1-SNAPSHOT.war" deploy-path="/" handle="module:/resource/MyWhatsAppSeleniumProj/MyWhatsAppSeleniumProj">
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
